<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".presenter.auth.register.RegisterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ProgressBar
            android:id="@+id/progressbar_register"
            style="?android:attr/progressBarStyle"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:indeterminateTint="@color/bg_app"
            android:scrollbarAlwaysDrawHorizontalTrack="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            android:layout_marginTop="450dp"
            app:layout_constraintStart_toStartOf="parent"
            android:visibility="gone"
            tools:visibility="visible"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/appBar"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                tools:ignore="MissingConstraints">
                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/text_toolbar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/register_toolbar_createaccount"
                        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        android:textSize="17sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.appcompat.widget.Toolbar>

            </com.google.android.material.appbar.AppBarLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical"
                android:layout_marginTop="32dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appBar">


                <EditText
                    android:id="@+id/edit_nome_cadastro"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginHorizontal="10dp"
                    android:inputType="textPersonName"
                    android:hint="@string/register_name"
                    android:drawablePadding="4dp"
                    android:textColorHint="#8CBAFA"
                    android:backgroundTint="#8CBAFA"
                    android:drawableStart="@drawable/ic_person"/>

                <EditText
                    android:id="@+id/edit_email_cadastro"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginHorizontal="10dp"
                    android:inputType="textEmailAddress"
                    android:hint="@string/login_text_email"
                    android:drawablePadding="4dp"
                    android:textColorHint="#8CBAFA"
                    android:backgroundTint="#8CBAFA"
                    android:drawableStart="@drawable/ic_email"/>

                <EditText
                    android:id="@+id/edit_tel_cadastro"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginHorizontal="10dp"
                    android:inputType="numberDecimal"
                    android:hint="@string/register_phone"
                    android:drawablePadding="4dp"
                    android:textColorHint="#8CBAFA"
                    android:backgroundTint="#8CBAFA"
                    android:drawableStart="@drawable/ic_phone"
                    android:autofillHints="" />

                <EditText
                    android:id="@+id/edit_senha_cadastro"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginHorizontal="10dp"
                    android:inputType="text"
                    android:hint="@string/login_text_password"
                    android:drawablePadding="4dp"
                    android:textColorHint="#8CBAFA"
                    android:backgroundTint="#8CBAFA"
                    android:drawableStart="@drawable/ic_password"
                    android:autofillHints="" />
                <EditText
                    android:id="@+id/edit_confirm_senha_cadastro"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginHorizontal="10dp"
                    android:inputType="text"
                    android:hint="@string/register_text_confirm_password"
                    android:drawablePadding="4dp"
                    android:textColorHint="#8CBAFA"
                    android:backgroundTint="#8CBAFA"
                    android:drawableStart="@drawable/ic_password"
                    android:autofillHints="" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnCadastrar"
                    android:layout_width="match_parent"
                    android:layout_height="62dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginRight="20dp"
                    android:backgroundTint="@color/bg_app"
                    android:text="@string/register_btn_register"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>



</ScrollView>